placement des preuves dans le tableau

--- a/index.html
+++ b/index.html
@@ -1163,119 +1163,123 @@
 					<td class="resume">18/10/16</td>
 					<td class="resume">1</td>
 					<td class="resume">1</td>
-					<td class="resume">? (certif)</td>
+					<td class="resume"><a href="img/preuves/vennPreuve.pdf" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Assyst Europe</td>
 					<td class="resume">18/10/16</td>
 					<td class="resume">1</td>
 					<td class="resume">1</td>
-					<td class="resume">? (certif)</td>
+					<td class="resume"><a href="img/preuves/assystPreuve.pdf" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Cisco Incubator</td>
 					<td class="resume">29/09/17</td>
 					<td class="resume">3</td>
 					<td class="resume">3</td>
-					<td class="resume">? (lien vers photos)</td>
+					<td class="resume"><a href="img/preuves/ciscoPreuve.png" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Key performance</td>
 					<td class="resume">10/10/17</td>
 					<td class="resume">2</td>
 					<td class="resume">2</td>
-					<td class="resume">? (lien vers photos)</td>
+					<td class="resume"><a href="img/preuves/keyPerfoPreuve.png" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">ING Java Challenge</td>
 					<td class="resume">19/10/17</td>
 					<td class="resume">1</td>
 					<td class="resume">1</td>
-					<td class="resume">? (lien vers photos)</td>
+					<td class="resume"><a href="img/preuves/javaPreuve1.jpg" target=_blank>Photo 1</a><br>
+									   <a href="img/preuves/javaPreuve2.jpg" target=_blank>Photo 2</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Dev day</td>
 					<td class="resume">28/11/17</td>
 					<td class="resume">8</td>
 					<td class="resume">8</td>
-					<td class="resume">? (certif)</td>
+					<td class="resume"><a href="img/preuves/devDayPreuve.png" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation C#</td>
-					<td class="resume">?</td>
+					<td class="resume">10-14/04/2017</td>
 					<td class="resume">35</td>
 					<td class="resume">10</td>
-					<td class="resume">? (certif)</td>
+					<td class="resume"><a href="img/preuves/sharpBasePreuve.pdf" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation ASP MVC</td>
-					<td class="resume">?</td>
+					<td class="resume">29/01-02/02/2018</td>
 					<td class="resume">35</td>
 					<td class="resume">10</td>
-					<td class="resume">? (certif)</td>
+					<td class="resume"><a href="img/preuves/aspPreuve.pdf" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation SQL</td>
-					<td class="resume">?</td>
+					<td class="resume">26-30/06/2017</td>
 					<td class="resume">35</td>
 					<td class="resume">10</td>
-					<td class="resume">? (certificat)</td>
+					<td class="resume"><a href="img/preuves/sqlPreuve.pdf" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Visite Econocom</td>
 					<td class="resume">17/03/17</td>
 					<td class="resume">3</td>
 					<td class="resume">3</td>
-					<td class="resume">? (certif)</td>
+					<td class="resume"><a href="img/preuves/econocomPreuve.pdf" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Journée portes ouvertes</td>
 					<td class="resume">22/03/17</td>
 					<td class="resume">2</td>
 					<td class="resume">2</td>
-					<td class="resume">? (certif)</td>
+					<td class="resume"><a href="img/preuves/jpoPreuve.pdf" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Semaine internationale</td>
 					<td class="resume">2-7/04/17</td>
 					<td class="resume">60</td>
 					<td class="resume">10</td>
-					<td class="resume">? (certif)</td>
+					<td class="resume"><a href="img/preuves/ITweekPreuve.pdf" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Cyber Security Challenge</td>
 					<td class="resume">7-8/03/18</td>
 					<td class="resume">16-18</td>
 					<td class="resume">10</td>
-					<td class="resume">? (liens vers photos)(lien vers scoreboard)</td>
+					<td class="resume"><a href="img/preuves/cscPreuve1.png" target=_blank>Photo 1</a><br>
+									   <a href="img/preuves/cscPreuve2.png" target=_blank>Photo 2</a></td>
 				</tr>
 				<tr>
 					<td class="resume">IT job day</td>
 					<td class="resume">24/04/18</td>
 					<td class="resume">2</td>
 					<td class="resume">2</td>
-					<td class="resume">? (lien vers photos)</td>
+					<td class="resume"><a href="img/preuves/jobdayPreuve1.jpg" target=_blank>Photo 1</a><br>
+									   <a href="img/preuves/jobdayPreuve2.jpg" target=_blank>Photo 2</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation Git et GitHub</td>
 					<td class="resume">6-7/05/18</td>
 					<td class="resume">6</td>
 					<td class="resume">6</td>
-					<td class="resume">? (lien vers photos du certif)</td>
+					<td class="resume"><a href="img/preuves/gitPreuve.png" target=_blank>Screenshot</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation tests utilisateurs</td>
 					<td class="resume">6-7/05/18</td>
 					<td class="resume">8</td>
 					<td class="resume">8</td>
-					<td class="resume">? (lien vers photos du certif)</td>
+					<td class="resume"><a href="img/preuves/testingPreuve1.png" target=_blank>Screenshot 1</a><br>
+									   <a href="img/preuves/testingPreuve2.png" target=_blank>Screenshot 2</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation leadership</td>
 					<td class="resume">6-7/05/18</td>
 					<td class="resume">12</td>
 					<td class="resume">10</td>
-					<td class="resume">? (lien vers photos du certif)</td>
+					<td class="resume"><a href="img/preuves/leaderPreuve.png" target=_blank>Screenshot</a></td>
 				</tr>
 		
 			</table>
