ajout du favicon

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
+	<link rel="icon" href="img/favicon.png" type="image/gif" sizes="16x16">
 
   </head>
 
