réparation de certains liens vers les preuves

--- a/index.html
+++ b/index.html
@@ -1190,14 +1190,14 @@
 					<td class="resume">29/09/17</td>
 					<td class="resume">3</td>
 					<td class="resume">3</td>
-					<td class="resume"><a href="img/preuves/ciscoPreuve.png" target=_blank>Certificat</a></td>
+					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/ciscoPreuve.PNG" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Key performance</td>
 					<td class="resume">10/10/17</td>
 					<td class="resume">2</td>
 					<td class="resume">2</td>
-					<td class="resume"><a href="img/preuves/keyPerfoPreuve.png" target=_blank>Certificat</a></td>
+					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/keyPerfoPreuve.PNG" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">ING Java Challenge</td>
@@ -1212,7 +1212,7 @@
 					<td class="resume">28/11/17</td>
 					<td class="resume">8</td>
 					<td class="resume">8</td>
-					<td class="resume"><a href="img/preuves/devDayPreuve.png" target=_blank>Certificat</a></td>
+					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/devDayPreuve.PNG" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation C#</td>
