--- a/index.html
+++ b/index.html
@@ -1190,29 +1190,29 @@
 					<td class="resume">29/09/17</td>
 					<td class="resume">3</td>
 					<td class="resume">3</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/ciscoPreuve.PNG" target=_blank>Certificat</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/ciscoPreuve.PNG" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Key performance</td>
 					<td class="resume">10/10/17</td>
 					<td class="resume">2</td>
 					<td class="resume">2</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/keyPerfoPreuve.PNG" target=_blank>Certificat</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/keyPerfoPreuve.PNG" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">ING Java Challenge</td>
 					<td class="resume">19/10/17</td>
 					<td class="resume">1</td>
 					<td class="resume">1</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/javaPreuve1.jpg" target=_blank>Photo 1</a><br>
-									   <a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/javaPreuve2.jpg" target=_blank>Photo 2</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/javaPreuve1.jpg" target=_blank>Photo 1</a><br>
+									   <a href="https://Steffi-Baugnies.github.io/img/preuves/javaPreuve2.jpg" target=_blank>Photo 2</a></td>
 				</tr>
 				<tr>
 					<td class="resume">DevDay</td>
 					<td class="resume">28/11/17</td>
 					<td class="resume">8</td>
 					<td class="resume">8</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/devDayPreuve.PNG" target=_blank>Certificat</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/devDayPreuve.PNG" target=_blank>Certificat</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation C#</td>
@@ -1261,38 +1261,38 @@
 					<td class="resume">7-8/03/18</td>
 					<td class="resume">16-18</td>
 					<td class="resume">10</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/cscPreuve1.PNG" target=_blank>Photo 1</a><br>
-									   <a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/cscPreuve2.PNG" target=_blank>Photo 2</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/cscPreuve1.PNG" target=_blank>Photo 1</a><br>
+									   <a href="https://Steffi-Baugnies.github.io/img/preuves/cscPreuve2.PNG" target=_blank>Photo 2</a></td>
 				</tr>
 				<tr>
 					<td class="resume">IT job day</td>
 					<td class="resume">24/04/18</td>
 					<td class="resume">2</td>
 					<td class="resume">2</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/jobdayPreuve1.jpg" target=_blank>Photo 1</a><br>
-									   <a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/jobdayPreuve2.jpg" target=_blank>Photo 2</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/jobdayPreuve1.jpg" target=_blank>Photo 1</a><br>
+									   <a href="https://Steffi-Baugnies.github.io/img/preuves/jobdayPreuve2.jpg" target=_blank>Photo 2</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation Git et GitHub</td>
 					<td class="resume">2018</td>
 					<td class="resume">6</td>
 					<td class="resume">6</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/gitPreuve.png" target=_blank>Screenshot</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/gitPreuve.png" target=_blank>Screenshot</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation tests utilisateurs</td>
 					<td class="resume">2018</td>
 					<td class="resume">8</td>
 					<td class="resume">8</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/testingPreuve1.png" target=_blank>Screenshot 1</a><br>
-									   <a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/testingPreuve2.PNG" target=_blank>Screenshot 2</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/testingPreuve1.png" target=_blank>Screenshot 1</a><br>
+									   <a href="https://Steffi-Baugnies.github.io/img/preuves/testingPreuve2.PNG" target=_blank>Screenshot 2</a></td>
 				</tr>
 				<tr>
 					<td class="resume">Formation leadership</td>
 					<td class="resume">2018</td>
 					<td class="resume">12</td>
 					<td class="resume">10</td>
-					<td class="resume"><a href="https://raw.githubusercontent.com/Steffi-Baugnies/Steffi-Baugnies.github.io/master/img/preuves/leaderPreuve.png" target=_blank>Screenshot</a></td>
+					<td class="resume"><a href="https://Steffi-Baugnies.github.io/img/preuves/leaderPreuve.png" target=_blank>Screenshot</a></td>
 				</tr>
 		
 			</table>
